# XBotLogger

./: CMakeLists.txt  Logger.cpp  Logger.hpp  MatLogger.hpp  README.md  RtLog.cpp  RtLog.hpp  XBotLoggerConfig.cmake.in
examples/: CMakeLists.txt  log_example.cpp
include/XBotLogger/: Logger.hpp  MatLogger.hpp
include/XBotLogger/utils/: Thread.h
src/: Logger.cpp  RtLog.cpp
